# asc-cli

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.context/: coverage_plan.md  ideas.md  plan.md  research.md  scratch_history.md  simulation_audit.md  validation_findings.md
.github/workflows/: ci.yml  pypi.yml
.rules/: ci_cd.md  code_review.md  documentation.md  git.md  python.md  self_improve.md  testing.md
ref/: app-store-connect-api.md
scripts/: test_pagination_real_api.py
src/asc_cli/: __init__.py  cli.py
src/asc_cli/api/: __init__.py  auth.py  client.py
src/asc_cli/commands/: __init__.py  apps.py  auth.py  bulk.py  subscriptions.py  testflight.py
src/asc_cli/config/: __init__.py  schema.py
src/yooz_asc/: __init__.py  cli.py
src/yooz_asc/api/: __init__.py  auth.py  client.py
src/yooz_asc/commands/: __init__.py  apps.py  auth.py  bulk.py  subscriptions.py  testflight.py
src/yooz_asc/config/: __init__.py  schema.py
src/yooz_asc/models/: __init__.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_commands.py  test_auth_coverage.py  test_bulk_commands.py  test_cli.py  test_cli_simulation.py  test_client.py  test_integration.py  test_keys.py  test_schema.py  test_simulation.py  test_subscriptions.py  test_subscriptions_commands.py  test_testflight_commands.py
tests/integration/: __init__.py  test_subscriptions_live.py
tests/simulation/: __init__.py  engine.py  responses.py  state.py  validators.py
tests/simulation/fixtures/: __init__.py  apps.py  price_points.py  territories.py
tests/simulation/routes/: __init__.py  apps.py  offers.py  pricing.py  subscriptions.py  territories.py  testflight.py
tests/validation/: README.md  __init__.py  compare_api_responses.py  comparison_results.json
