[project]
name = "asc-cli"
version = "0.1.0"
description = "A powerful CLI for Apple App Store Connect API"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Yooz Labs", email = "hello@yooz.live" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
keywords = ["app-store-connect", "apple", "cli", "subscriptions", "testflight"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",  # For mocking httpx
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
asc = "asc_cli.cli:app"

[project.urls]
Homepage = "https://github.com/yooz-labs/asc-cli"
Documentation = "https://github.com/yooz-labs/asc-cli#readme"
Repository = "https://github.com/yooz-labs/asc-cli"
Issues = "https://github.com/yooz-labs/asc-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asc_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0915",  # Too many statements (CLI commands can be long)
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "B008",     # Function call in default argument (typer.Option pattern)
    "PLC0415",  # Import not at top level (lazy imports are sometimes needed)
    "ARG001",   # Unused function argument (CLI stubs may have unused args)
    "ARG002",   # Unused method argument (same reason)
    "B904",     # raise from in except (typer.Exit doesn't need this)
]

[tool.ruff.lint.isort]
known-first-party = ["asc_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["jwt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/asc_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
    "-m", "not integration",
]
markers = [
    "integration: tests that require real API credentials (run with: pytest -m integration)",
    "simulation: tests using the API simulation engine",
]

[tool.coverage.run]
source = ["src/asc_cli"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
